syntax = "proto3";

message Post {
    int64 id = 1;
    int64 user_id = 2;
    string description = 3;
    string created_at = 4;
}

message PostCreateRequest {
    int64 user_id = 1;
    string description = 2;
    string created_at = 3;
}

message PostDeleteRequest {
    int64 post_id = 1;
    int64 user_id = 2;
}

message PostDeleteResponse {
    bool status = 1;
}

message PostsRequest {}
message PostsResponse {
    repeated Post posts = 1;
}

service PostService{
    rpc Create(PostCreateRequest) returns(Post);
    rpc Delete(PostDeleteRequest) returns(PostDeleteResponse);
    rpc All(PostsRequest) returns(PostsResponse);
}